[project]
name = "ng2nlm"
version = "0.0.1"
description = "Turn a Norton Guide into a source for NotebookLM"
readme = "README.md"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
requires-python = ">=3.13"
dependencies = [
    "ngdb>=1.2.0",
]
license = "GPL-3.0-or-later"

[project.scripts]
ng2nlm = "ng2nlm:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pyright]
venvPath="."
venv=".venv"
exclude=[".venv"]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.11",
]
